# preconvert

./: .cruft.json  .gitignore  .travis.yml  404.html  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  clean.sh  github_deploy_key.enc  index.html  lint.sh  mkdocs.yml  pyproject.toml  search.html  setup.cfg  sitemap.xml  test.sh  update_docs.sh
.github/workflows/: test.yml
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  base64.data.json  base64.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  dataclasses.data.json  dataclasses.meta.json  datetime.data.json  datetime.meta.json  decimal.data.json  decimal.meta.json  enum.data.json  enum.meta.json  functools.data.json  functools.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  numbers.data.json  numbers.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  time.data.json  time.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  (+4 more)
ACKNOWLEDGEMENTS/: index.html
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CODING_STANDARD/: index.html
CONTRIBUTING/: index.html
art/: logo.xcf  logo_large.xcf
docs/: ACKNOWLEDGEMENTS.md
preconvert/: __init__.py  convert.py  converters.py  exceptions.py  index.html  register.py
scripts/: clean.sh  lint.sh  test.sh
search/: search_index.json
templates/: text.mako
tests/: constants.py  test_output.py
(+73 files in other folders)
