[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "preconvert"
author = "Timothy Edmund Crosley"
author-email = "timothy.crosley@gmail.com"
home-page = "https://github.com/timothycrosley/preconvert"
requires-python=">=3.5"
description-file="README.md"
classifiers=[
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.flit.metadata.requires-extra]
simplejson = ["simplejson"]
msgpack = ["msgpack"]
bson = ["pymongo"]
