[tool.poetry]
name = "preconvert"
version = "0.0.6"
description = "A Library to enable preconversion of any Python type into one that is easily serializable"
authors = ["Timothy Crosley <timothy.crosley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
mypy = "^0.790"
flake8 = "^3.8.4"
safety = "^1.10.3"
bandit = "^1.7.0"
vulture = "^2.3"
flake8-bugbear = "^20.11.1"
pytest = "^6.2.1"
mkdocs = "^1.1.2"
pdoc3 = "^0.9.2"
simplejson = "^3.17.2"
msgpack = "^1.0.2"
bson = "^0.5.10"
mkdocs-material = "^6.2.5"
pytest-coverage = "^0.0"
preconvert_numpy = "^0.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "hug"
